# expense-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  telegram_webhook.py  wechat_webhook.py
config/: __init__.py  settings.py
core/: __init__.py  categories.py  currencies.py  exchange_rates.py  function_batch_executor.py  function_batch_handler.py  function_calls.py  function_selector.py  intent_parser.py  messages.py  pending_requests.py  sheet_export.py  sheet_export_service.py  statistics.py  transaction_service.py  validator.py
docs/: adr-001-postgresql-ledger-ownership.md  architecture.md  cloud-run-cicd.md  database-schema.md  domain-model.md  google-sheets-template.md  index.md  interfaces.md  now.md  postgres-backfill-cutover.md  requirements.md  telegram-webhook.md  testing-strategy.md
integrations/: exchange_rates.py  llm_client.py  telegram_client.py
migrations/: 0001_initial_schema.sql  0002_add_transaction_external_id.sql  0003_google_sheets_export.sql  0004_function_call_batches.sql
scripts/: __init__.py  backfill_google_sheets_to_postgres.py  deploy_cloud_run.sh  deploy_sheet_projection_job.sh  migrate_postgres.py  migration_utils.py  sync_postgres_to_google_sheets.py  verify_postgres_backfill.py
tests/: test_app_bootstrap.py  test_backfill_verification.py  test_docs.py  test_exchange_rates.py  test_function_batch_executor.py  test_function_batch_handler.py  test_function_calls.py  test_function_selector.py  test_github_actions_cicd.py  test_intent_parser.py  (+18 more)
(+18 files in other folders)
