[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-agent"
version = "0.1.0"
description = "Telegram expense agent MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "google-api-python-client>=2.130,<3.0",
    "google-auth>=2.29,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8,<9",
]

[tool.setuptools]
packages = ["app", "config", "core", "integrations", "integrations.google_sheets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
